--- a/templates/main.html
+++ b/templates/main.html
@@ -11,6 +11,17 @@
 
     {% include "navbar.html" %}
 
+    <div>
+        
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+
+    </div>
     {% block content %}
 
 
