--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,4 +4,11 @@
 <form method="GET" action="{% url "home" %}">
     <input type="text" name="q" placeholder="Search Events..."/>
 </form>
+
+{% if request.user.is_authenticated %}
+<a href="logout">Logout</a>
+
+{% else %}
+<a href="{% url "login" %}">Login</a>
+{% endif %}
 <hr>
