--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,7 +6,7 @@
 <style>
     .home-container{
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 3fr 1fr;
     }
 </style>
 <div class="home-container">
@@ -45,6 +45,16 @@
             </div>
 
         </div>
+    </div>
+
+    <div>
+        <h3>Recent Activity</h3>
+        {% for user_message in  user_messages %}
+        <div>
+            <p>@{{user_message.user}} | {{user_message.body}}</p>
+        </div>
+        {% endfor %}
+
     </div>
 
 </div>
