--- a/base/templates/base/event.html
+++ b/base/templates/base/event.html
@@ -2,7 +2,26 @@
 
 {% block content %}
 
-<h1>{{event.name}}</h1>
+<div>
+    <h1>{{event.name}}</h1>
+
+    <div>
+        {{event.host}} | {{event.date}} {{event.time}}
+    </div>
+
+    <hr>
+
+    <p>{{event.description}}</p>
+
+    <hr>
+
+    <div>
+        <h3>Participants</h3>
+
+
+    </div>
+
+</div>
 
 <div>
     <h3>Event messages</h3>
