--- a/base/templates/base/event.html
+++ b/base/templates/base/event.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-<div>
+<div class="event-container">
+    
     <h1>{{event.name}}</h1>
 
     <div>
@@ -14,22 +15,60 @@
     <p>{{event.description}}</p>
 
     <hr>
+    {% if request.user.is_authenticated %}    
+        <div>
+            {% if not request.user in participants %}
+            <form method="POST" action="">
+                {% csrf_token %}                
+                <button type="submit" name="register">Register</button>
+                
+            </form>
+            {% else %}
+            <form method="POST" action="">
+                {% csrf_token %}                
+                <button type="submit" name="unregister">Unregister</button>
+            </form>
+            {% endif %}
+        </div>
+        <hr>
+    {% endif %}
+
+
 
     <div>
+        <hr>
         <h3>Participants</h3>
-
-
+        {% for participant in participants %}
+        {{participant.username}}
+        {% endfor %}
+        <hr>
     </div>
 
-</div>
-
-<div>
-    <h3>Event messages</h3>
-    {% for user_message in  user_messages %}
     <div>
-        <p>@{{user_message.user}} | {{user_message.body}}</p>
+        <h3>Event messages</h3>
+        <hr>
+        {% if request.user.is_authenticated %}
+            <div>
+                <form method="POST" action="">
+                    {% csrf_token %}
+                    <input type="text" name="body" placeholder="Write your message..." >
+                </form>
+            </div>
+            <hr>
+        {% endif %}
+
+        {% for event_message in  event_messages %}
+        <div>
+            {% if request.user == event_message.user %}
+            <a href="{% url "delete-message" event_message.id %}">Delete</a>
+            {% endif %}
+            <small>@{{event_message.user}} | {{event_message.created|timesince}} ago</small>
+            <p>{{event_message.body}}</p>
+            <hr>
+        </div>
+        {% endfor %}
+
     </div>
-    {% endfor %}
 
 </div>
 
