--- a/base/templates/base/events_component.html
+++ b/base/templates/base/events_component.html
@@ -6,7 +6,7 @@
             <a href="{% url "update-event" event.id %}">Update Event</a>
             <a href="{% url "delete-event" event.id %}"> Delete</a>
             {% endif %}
-            <span>@{{event.host.username}}</span>
+            <span><a href="{% url "profile" event.host.id %}">@{{event.host.username}}</a></span>
             <h5>{{event.id}} -- <a href="{% url "event" event.id %}">{{event.name}}</a></h5>
             <small>{{event.type.name}}</small>
             <hr>
